# Sales-Agent

client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx
client/src/components/: AuthLayout.tsx  ChatMessage.tsx  CustomerCard.tsx  CustomerModal.tsx  GoogleSignIn.tsx  Protected.tsx
client/src/data/: mockData.ts
client/src/pages/: Landing.tsx  Main.tsx
client/src/services/: salesBot.ts
client/src/types/: Customer.ts
sales_agent_server/: pyproject.toml
sales_agent_server/app/: agent.py  api.py  email_fetching.py  main.py  token_store.py
sales_agent_server/app/auth/: google_oauth.py
sales_agent_server/app/database/: models.py  session.py
sales_agent_server/app/lib/: attachments.py  dependencies.py  jwt_utils.py  last_10_emails.py  utils.py
